--- a/Bind/Src/App.fx.yaml
+++ b/Bind/Src/App.fx.yaml
@@ -77,7 +77,7 @@ App As appinfo:
             ClearCollect(Col_UserPermiso,{User:"A0D0GI1"},{User:"ASALDES"},{User:"D0M0E0D"},{User:"Product Owner"},{User:"E0R065K"},{User:"G0O00SY"},{User:"M0G09A7"},{User:"M0G09RU"},{User:"W0P00K7"});
             /*===========================================*/ 
         );
-        ClearCollect(Col_BD_Proveedores,AddColumns(Lst_Proveedores,"Personas",CountRows(Filter(Col_BD_Persona,ID_Proveedor=Text(ThisRecord.ID), GerenciaOrigen_0="GERENCIA TECNOLOGIA"))));
+        ClearCollect(Col_BD_Proveedores,AddColumns(Lst_Proveedores,Personas,CountRows(Filter(Col_BD_Persona,ID_Proveedor=Text(ThisRecord.ID), GerenciaOrigen_0="GERENCIA TECNOLOGIA"))));
         
         ClearCollect(Col_DominiosAsignados,LookUp(Perfilamiento,Nombre.DisplayName=_Perfil.displayName,Dominio));  //trae los dominios asignados al usuario
         /*------------------------------------------------------*/
