--- a/Bind/Src/ListadoProductoProyecto.fx.yaml
+++ b/Bind/Src/ListadoProductoProyecto.fx.yaml
@@ -1839,7 +1839,7 @@ ListadoProductoProyecto As screen:
                         );
                         Blank()
                     )*/
-                    ,Cmb_Equipo_2.SearchText,"Equipo_x002f_Squad")
+                    ,Cmb_Equipo_2.SearchText,Equipo_x002f_Squad)
                 SelectMultiple: =false
                 Width: =Txt_FondoForm1_65.Width - 27
                 X: =1495
@@ -3531,7 +3531,7 @@ ListadoProductoProyecto As screen:
             PaddingLeft: =If(Self.DisplayMode = DisplayMode.Edit, 5, 0)
             PressedFill: =RGBA(0, 121, 187, 1)
             SearchFields: =["Nombre_x0020_Producto_x002f_Proy"]
-            SearchItems: =Search(Filter(Col_DominiosGestion,'Categoría Iniciativa'.Value = Dpd_FiltroProyeProd.Selected.Value),Cmb_FiltroNombre.SearchText,"Nombre_x0020_Producto_x002f_Proy")
+            SearchItems: =Search(Filter(Col_DominiosGestion,'Categoría Iniciativa'.Value = Dpd_FiltroProyeProd.Selected.Value),Cmb_FiltroNombre.SearchText,Nombre_x0020_Producto_x002f_Proy)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
