--- a/Bind/Src/ModuloRevisionFormatosDetalle.fx.yaml
+++ b/Bind/Src/ModuloRevisionFormatosDetalle.fx.yaml
@@ -296,7 +296,7 @@ ModuloRevisionFormatosDetalle As screen:
             (Mes=Cmb_FiltroNombre_15.Selected.Value||IsBlank(Cmb_FiltroNombre_15.Selected.Value)) && 
             (Anio=Cmb_FiltroNombre_16.Selected.Value||IsBlank(Cmb_FiltroNombre_16.Selected.Value)) &&
             (Certificado="F30" || Certificado="F30-1")&&Estado.Value="Cargado"),
-            Txt_FondoForm1_207.Text,"Certificado","RUT","{Name}")
+            Txt_FondoForm1_207.Text,Certificado,RUT,'{Name}')
         Layout: =Layout.Vertical
         LoadingSpinner: =LoadingSpinner.Data
         TemplateSize: =56
