--- a/Bind/Src/ServiciosTech.fx.yaml
+++ b/Bind/Src/ServiciosTech.fx.yaml
@@ -813,7 +813,7 @@ ServiciosTech As screen:
                 IDDominio="Via-EFF1A142-75C7-8AD8-4CCA-C645097B0BA4" || 
                 IDDominio="Via-FDB30966-A6C1-2FAC-8856-34429C2AA582")
                 &&Estado<>"Inactivo")
-                ,Cmb_FiltroNombre_7.SearchText,"Nombre_x0020_Producto_x002f_Proy")
+                ,Cmb_FiltroNombre_7.SearchText,Nombre_x0020_Producto_x002f_Proy)
             SelectionFill: =RGBA(0, 121, 187, 1)
             SelectMultiple: =false
             Tooltip: =
